Correct width of page on mobile devices.
The profile image was increasing the width of the page to be greater than the window.

--- a/src/styles/home-page.scss
+++ b/src/styles/home-page.scss
@@ -149,6 +149,8 @@
 }
 
 .profile-image {
+    width: 100%;
+
     @include media-breakpoint-up(lg) {
         width: auto;
     }
